<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">KeepOn</string>
    <string name="app_desc">Keep your screen on smartly!</string>

    <string name="initialization_short_text">Initialization</string>
    <string name="initialization_not_ready">Sorry, The system components are not ready yet, please retry</string>

    <string name="splash_loading_text">Initialization of system components</string>
    <string name="splash_cannot_start_text">The system components are not ready yet, please try again later :(</string>

    <string name="app_intro">KeepOn Intro</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_theme_title">Theme</string>
    <string name="splashscreen_logo">Logo Splash screen</string>

    <string name="notification_screen_off_service">Monitoring of the screen shutdown…</string>
    <string name="notification_timeout_service">Monitoring of the modification of the screen timeout…</string>
    <string name="notification_hide">Press to hide this notification</string>

    <string name="timeout_settings">Settings</string>
    <string name="timeout_settings_label">Choose the values that will be available in the Android Quick Settings:</string>
    <string name="reset_checkbox">Automatically restore value to %s after you lock the device</string>
    <string name="settings_save">Configuration saved!</string>

    <string name="timeout_15_seconds">15 seconds</string>
    <string name="timeout_30_seconds">30 seconds</string>
    <string name="timeout_1_minute">1 minute</string>
    <string name="timeout_2_minutes">2 minutes</string>
    <string name="timeout_5_minutes">5 minutes</string>
    <string name="timeout_10_minutes">10 minutes</string>
    <string name="timeout_30_minutes">30 minutes</string>
    <string name="timeout_1_hour">1 hour</string>
    <string name="timeout_infinite">Indefinitely</string>

    <string name="about_card_title">About</string>
    <string name="about_card_version">&lt;b>Version:&lt;/b></string>
    <string name="about_card_author"><b>Author:</b> TwentyNine78</string>
    <string name="about_card_credits_label"><b>Credits:</b></string>
    <string name="about_card_credits"><u>AppIntro, MultiProcessPreferences, Glide, Gene-rate, PageIndicatorView, Toothpick</u></string>
    <string name="about_card_source"><b>Source Code:</b> <a href="https://github.com/twentynine78/KeepOn">https://github.com/twentynine78/KeepOn</a></string>

    <string name="qs_service_name">Keep screen on</string>
    <string name="qs_short_second">s</string>
    <string name="qs_short_minute">m</string>
    <string name="qs_short_hour">h</string>
    <string name="qs_short_infinite" translatable="false">∞</string>

    <string name="dialog_permission_title">Permission needed</string>
    <string name="dialog_permission_text">KeepOn need to modify system settings permission to change screen timeout.
        \nPermission must be granted for the application to work.
    </string>
    <string name="dialog_permission_button">Grant</string>

    <string name="dialog_notification_title">Disable notification</string>
    <string name="dialog_notification_text">Disable notifications for a better experience!</string>
    <string name="dialog_notification_button">Disable</string>

    <string name="dialog_missing_settings_text">Select at least one additional value to use the Android Quick Settings tile!</string>
    <string name="dialog_missing_settings_button">OK</string>

    <string name="dialog_default_timeout_text">Are you sur you want to set default screen timeout to %s?</string>
    <string name="dialog_default_timeout_button">Yes</string>

    <string name="dialog_credits_text">
        <font size="12">
        &#160;&#160;&#160;<font size="14"><b>AppIntro</b></font>
        \n\nGitHub: https://github.com/AppIntro/AppIntro
        \nLicence: https://github.com/AppIntro/AppIntro/blob/master/LICENSE
        \n\n\n
        &#160;&#160;&#160;<font size="14"><b>MultiProcessPreferences</b></font>
        \n\nGitHub: https://github.com/TreeFrogApps/MultiProcessPreferences
        \n\n\n
        &#160;&#160;&#160;<font size="14"><b>Glide</b></font>
        \n\nGitHub: https://github.com/bumptech/glide
        \nLicence: https://github.com/bumptech/glide/blob/master/LICENSE
        \n\n\n
        &#160;&#160;&#160;<font size="14"><b>Gene-rate</b></font>
        \n\nGitHub: https://github.com/Pixplicity/gene-rate
        \nLicence: https://github.com/Pixplicity/gene-rate/blob/master/LICENSE
        \n\n\n
        &#160;&#160;&#160;<font size="14"><b>PageIndicatorView</b></font>
        \n\nGitHub: https://github.com/romandanylyk/PageIndicatorView
        \n\n\n
        &#160;&#160;&#160;<font size="14"><b>Toothpick</b></font>
        \n\nGitHub: https://github.com/stephanenicolas/toothpick
        \nLicence: https://github.com/stephanenicolas/toothpick/blob/master/LICENSE
        </font>
    </string>
    <string name="dialog_credits_button">Close</string>

    <string name="dialog_add_qstile_warning">This help was performed on a Google Pixel phone with an unmodified Android version. Depending on your smartphone manufacturer, the operations may be slightly different.</string>
    <string name="dialog_add_qstile_text1">Open the notification drawer</string>
    <string name="dialog_add_qstile_text2">Open the quick settings drawer by pulling down from top of the screen</string>
    <string name="dialog_add_qstile_text3">Tap the EDIT button</string>
    <string name="dialog_add_qstile_text4">Tap and drag the tile named \"Keep screen on\" into the top area of the window</string>
    <string name="dialog_add_qstile_text5">Tap back and return to this app</string>
    <string name="dialog_add_qstile_button">Close</string>

    <string name="intro_home_title">Welcome!</string>
    <string name="intro_home_desc">Keep your screen on smartly!
        \n\nKeepOn allows you to keep your device\'s screen on for the desired duration and also allows you to return to the default settings when the screen turns off.
        \nThe application is free and open-source, without any ads/analytics.</string>
    <string name="intro_info1_title">Suitable for your device</string>
    <string name="intro_info1_desc">KeepOn adapts to your device\'s configuration for easy use!
        \n\nThe default value is automatically selected and retained for reapplication.
        \n\nYou can change the default value without leaving KeepOn, just press and hold the desired value.</string>
    <string name="intro_info2_title">Don\'t forget</string>
    <string name="intro_info2_desc">KeepOn detects by default when the screen turns off to reapply the initial value!
        \n\nThis setting can be disabled at any time in the settings.</string>
    <string name="intro_info3_title">Customizable!</string>
    <string name="intro_info3_desc">You can change the appearance of the Quick Settings tile from the pane at the bottom of the screen.
        \n\nYou can also change the screen timeout by clicking on the preview on the left side of this pane.</string>
    <string name="intro_info4_title">Powerful</string>
    <string name="intro_info4_desc">KeepOn is natively integrated with automation apps that support Tasker plugin.
        \n\nThanks to the plugin you can extend the possibilities of KeepOn to infinity.</string>
    <string name="intro_qstile_title">Easy to use</string>
    <string name="intro_qstile_desc">Once the configuration is complete, simply add the KeepOn tile to the Android Quick Settings to use it!
        \n\nA Tasker/Locale plugin is integrated and allows you to use KeepOn functions from another compatible application!</string>
    <string name="intro_qstile_button">Help</string>
    <string name="intro_toast_permission_needed">This permission is required for the application to work!</string>

    <string name="bottom_sheet_preview_desc">Quick settings preview</string>
    <string name="bottom_sheet_arrow_desc">Show/Hide</string>
    <string name="bottom_sheet_peek_text">Quick settings style</string>
    <string name="bottom_sheet_font_options_label">Font Options</string>
    <string name="bottom_sheet_size_label">Size</string>
    <string name="bottom_sheet_skew_label">Skew</string>
    <string name="bottom_sheet_position_label">Position</string>
    <string name="bottom_sheet_typeface_label">Typeface</string>
    <string name="bottom_sheet_font_styles_label">Font Styles</string>
    <string name="bottom_sheet_text_style_label">Text Style</string>
    <string name="bottom_sheet_typeface_san_serif">San serif</string>
    <string name="bottom_sheet_typeface_serif">Serif</string>
    <string name="bottom_sheet_typeface_monospace">Monospace</string>
    <string name="bottom_sheet_style_bold">Bold</string>
    <string name="bottom_sheet_style_underline">Underline</string>
    <string name="bottom_sheet_style_smcp">Small capital</string>
    <string name="bottom_sheet_style_fill">Fill</string>
    <string name="bottom_sheet_style_fill_and_stroke">Fill and Stroke</string>
    <string name="bottom_sheet_style_stroke">Stroke</string>

    <string name="generate_please_rate">Hey there! You seem to like this app, would you mind visiting the Play Store and give a rating? It would help me a great deal!
    \n\nIf instead you hate this app, we would love to hear your feedback so we can improve. Thanks!</string>
    <string name="generate_please_rate_short">Hey, you seem to like this app. You would help me a great deal with a 5-star rating!</string>
    <string name="generate_button_yes">Rate!</string>
    <string name="generate_button_feedback">Give feedback</string>
    <string name="generate_button_dont_ask">Don’t ask again</string>
    <string name="generate_swipe_to_dismiss">Swipe to dismiss</string>

    <!-- A format string for breadcrumbs in the titlebar.  For left to right languages, such as English, the format will look something like "Main Activity > Sub Activity > Sub Activity 2".  Item #1 is the previous path, item #2 is the separator, and item #3 is the current item.  For most left to right languages, this shouldn't need to be changed. -->
    <string name="twofortyfouram_locale_breadcrumb_format" translatable="false" tools:ignore="UnusedResources">%1$s%2$s%3$s</string>
    <!-- The separator character for breadcrumbs.  For most left to right languages, this shouldn't need to be changed. -->
    <string name="twofortyfouram_locale_breadcrumb_separator" translatable="false" tools:ignore="UnusedResources">\u0020&gt;\u0020</string>

    <string name="tasker_menu_dontsave">Cancel</string>
    <string name="tasker_menu_save">Save</string>
    <string name="tasker_activity_name">Changing the screen timeout</string>
    <string name="tasker_activity_title">Choose the desired value</string>

    <string name="timeout_restore_short">Default value</string>
    <string name="timeout_restore">Restore the default value</string>
    <string name="timeout_previous_short">Previous value</string>
    <string name="timeout_previous">Restore the previous value</string>

    <string name="notification_channel_name">KeepOn Services</string>
</resources>
