<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".tasker.EditActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="20dp"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?attr/actionBarSize"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selectionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:elevation="1dp"
                style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:text="@string/tasker_activity_title" />

                    <RadioGroup
                        android:id="@+id/timeout_radiogroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_previous"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_previous"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/timeout_restore"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_15_seconds"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_15_seconds"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_30_seconds"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_30_seconds"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_1_minute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_1_minute"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_2_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_2_minutes"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_5_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_5_minutes"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_10_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_10_minutes"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_30_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_30_minutes"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_1_hour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_1_hour"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/timeout_infinite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/timeout_infinite"/>

                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/tasker_menu_save"
        android:layout_margin="20dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>