<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="1dp"
        android:visibility="invisible"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_card_title"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/about_card_version"
                android:textColor="@color/colorText"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/about_card_author"
                android:textColor="@color/colorText"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/about_card_credits"
                android:textColor="@color/colorText"
                android:textAlignment="textStart"
                android:autoLink="web" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:text="@string/about_card_source"
                android:textColor="@color/colorText"
                android:textColorLink="@color/colorTextDisabled"
                android:textAlignment="textStart"
                android:autoLink="web" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>