<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constrainedHeight="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_max="622dp"
    tools:context=".ui.MainActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectionCard"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="1dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startSwitchGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endSwitchGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeout_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/timeout_settings"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeout_settings_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/timeout_settings_label"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                app:layout_constraintTop_toBottomOf="@id/timeout_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch15s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/timeout_15_seconds"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/timeout_settings_label"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch30s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_30_seconds"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch15s"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_1_minute"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch30s"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch2m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_2_minutes"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch1m"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch5m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_5_minutes"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch2m"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch10m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_10_minutes"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch5m"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch30m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_30_minutes"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch10m"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_1_hour"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch30m"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchInfinite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/timeout_infinite"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switch1h"
                app:layout_constraintStart_toEndOf="@id/startSwitchGuideline"
                app:layout_constraintEnd_toStartOf="@id/endSwitchGuideline" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxScreenOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:minHeight="35dp"
                android:text="@string/reset_checkbox"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toBottomOf="@id/switchInfinite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>